# backend/router/discussion.go
@@ -4,7 +4,6 @@ import (
 	"fmt"
 	"io"
 
-	"github.com/chaitin/koalaqa/model"
 	"github.com/chaitin/koalaqa/pkg/context"
 	"github.com/chaitin/koalaqa/server"
 	"github.com/chaitin/koalaqa/svc"
@@ -191,10 +190,6 @@ func (d *discussion) Ask(ctx *context.Context) {
 		return
 	}
 
-	if ctx.GetBool("cors") {
-		req.Source = model.AskSessionSourcePlugin
-	}
-
 	stream, err := d.disc.Ask(ctx, ctx.GetUser().UID, req)
 	if err != nil {
 		ctx.InternalError(err, "get ask stream failed")
@@ -305,10 +300,6 @@ func (d *discussion) SummaryByContent(ctx *context.Context) {
 	if err != nil {
 		ctx.BadRequest(err)
 		return
-	}
-
-	if ctx.GetBool("cors") {
-		req.Source = model.AskSessionSourcePlugin
 	}
 
 	stream, err := d.disc.SummaryByContent(ctx, ctx.GetUser().UID, req)
